feat: Updated README and POM